Feature: Backend Server

--- a/server/package.json
+++ b/server/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "fib-calc-worker",
+  "name": "fib-calc-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "start": "node index.js"
   },
   "author": "David Lacho",
   "license": "ISC",
   "dependencies": {
+    "express": "4.16.3",
+    "pg": "8.0.3",
+    "redis": "2.8.0",
+    "cors": "2.8.4",
     "nodemon": "1.18.3",
-    "redis": "2.8.0"
+    "body-parser": "*"
   },
   "devDependencies": {
     "prettier": "2.4.1"
