--- a/api/Dockerfile.dev
+++ b/api/Dockerfile.dev
@@ -1,7 +1,6 @@
 FROM node:alpine
 WORKDIR '/app'
-COPY ./package.json ./
-COPY ./package-lock.json ./
+COPY ./package*.json ./
 RUN npm ci
 COPY . .
 CMD ["npm", "run", "dev"]
